Fix #3 Automated metadata testing + metadata corrections (bulk of work by @rnveach)

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/annotation/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/annotation/checkstyle-metadata.properties
@@ -9,6 +9,7 @@ AnnotationUseStyle.trailingArrayComma = Defines the policy for trailing comma in
 
 MissingDeprecated.desc = Verifies that both the <code>java.lang.Deprecated</code> annotation is present and the <code>@deprecated<code> Javadoc tag is present when either is present.
 MissingDeprecated.name = Missing Deprecated
+MissingDeprecated.skipNoJavadoc = When this property is set to true check ignore cases when JavaDoc is missing, but still warns when JavaDoc is present but either @deprecated is missing from JavaDoc or @deprecated is missing from the element.
 
 MissingOverride.desc                  = Verifies that the <code>java.lang.Override</code> annotation is present when the <code>{@inheritDoc}</code> javadoc tag is present.
 MissingOverride.javaFiveCompatibility = When this property is true this check will only check classes, interfaces, etc. that do not contain the extends or implements keyword or are not anonymous classes. This means it only checks methods overridden from java.lang.Object.Java 5 Compatibility mode severely limits this check. It is recommended to only use it on Java 5 source.
