--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/blocks/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/blocks/checkstyle-metadata.properties
@@ -17,6 +17,7 @@ EmptyCatchBlock.commentFormat = The format of the first comment inside empty cat
 LeftCurly.desc          = Checks for the placement of left curly braces (<code>'{'</code>) for code blocks.<br/>\r\nThe policy to verify is specified using property <code>option</code>.<br/>\r\nPolicies <scode>eol</code> and <code> nlow</code> take into account property <code>maxLineLength</code>.
 LeftCurly.name          = Left Curly Brace Placement
 LeftCurly.option        = policy on placement of a left curly brace ('{')
+LeftCurly.ignoreEnums   = If true, Check will ignore enums when left curly brace policy is EOL
 LeftCurly.tokens        = blocks to check
 
 NeedBraces.desc   = Checks for braces around code blocks.
