--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/checkstyle-metadata.properties
@@ -13,33 +13,11 @@ DescendantToken.minimumMessage = error message when minimum count not reached
 DescendantToken.minimumNumber  = a minimum count for descendants
 DescendantToken.name           = Descendent Token Check
 DescendantToken.sumTokenCounts = whether the number of tokens found should be calculated from the sum of the individual token counts
-DescendantToken.tokens         = Tokens to check.
 
 FinalParameters.desc   = Check that method/constructor parameters are final. Interface methods are not checked - the final keyword does not make sense for interface method parameters as there is no code that could modify the parameter.<br/>\r\nRationale: Changing the value of parameters during the execution of the method's algorithm can be confusing and should be avoided. A great way to let the Java compiler prevent this coding style is to declare parameters final.
 FinalParameters.name   = Final Parameters
 FinalParameters.tokens = Tokens to check.
 FinalParameters.ignorePrimitiveTypes = ignore primitive types as parameters
-
-GenericIllegalRegexp.desc           = A generic check for code problems - the user can search for any pattern. This is similar to a recursive grep, only that it's integrated in checkstyle.<br/>\r\nRationale: This check can be used to prototype checks and to find common bad practice such as calling <code>ex.printStacktrace()</code>, <code>System.out.println()</code>, <code>System.exit()</code>, etc.
-GenericIllegalRegexp.format         = Pattern to check for.
-GenericIllegalRegexp.ignoreCase     = Controls whether to ignore case when searching.
-GenericIllegalRegexp.ignoreComments = Controls whether to ignore text in comments when searching.
-GenericIllegalRegexp.message        = Message which is used to notify about violations, if empty then default(hard-coded) message is used.
-GenericIllegalRegexp.name           = Generic Illegal Regexp
-
-Indentation.basicOffset     = how many spaces to use for new indentation level
-Indentation.braceAdjustment = how far brace should be indented when on next line
-Indentation.caseIndent      = how much to indent a case label
-Indentation.desc            = Checks correct indentation of Java Code.<br/>\r\nThe basic idea behind this is that while pretty printers are sometimes convienent for bulk reformats of legacy code, they often either aren't configurable enough or just can't anticipate how format should be done. Sometimes this is personal preference, other times it is practical experience. In any case, this check should just ensure that a minimal set of indentation rules are followed.
-Indentation.name            = Indentation
-Indentation.throwsIndent    = how far throws should be indented when on next line
-Indentation.arrayInitIndent = how much to indent an array initialization when on next line
-Indentation.lineWrappingIndentation = how far continuation line should be indented when line-wrapping is present
-Indentation.forceStrictCondition = force strict condition in line wrapping case. If value is true, line wrap indent have to be same as lineWrappingIndentation parameter
-
-CommentsIndentation.name    = Comments Indentation
-CommentsIndentation.desc    = Controls the indentation between comments and surrounding code. Comments are indented at the same level as the surrounding code. Detailed info about such convention can be found <a href="http://checkstyle.sourceforge.net/reports/google-java-style.html#s4.8.6.1-block-comment-style">here</a>.
-CommentsIndentation.tokens  = tokens to check
 
 Miscellaneous.group = Miscellaneous
 
@@ -47,10 +25,6 @@ NewlineAtEndOfFile.desc           = Checks whether files end with a new line.<br
 NewlineAtEndOfFile.fileExtensions = file type extension of the files to check.
 NewlineAtEndOfFile.lineSeparator  = type of line separator
 NewlineAtEndOfFile.name           = New Line At End Of File
-
-RequiredRegexp.desc   = A check that makes sure that a specified pattern exists in the code, e.g. a required legal text. It does not care about where in the file the pattern is
-RequiredRegexp.format = required pattern
-RequiredRegexp.name   = Required Regular Expression
 
 TodoComment.desc   = A check for TODO: comments. Actually it is a generic regular expression matcher on Java comments. To check for other patterns in Java comments, set property format.
 TodoComment.format = Regular expression definging pattern to look for.
@@ -87,3 +61,7 @@ AvoidEscapedUnicodeCharacters.allowNonPrintableEscapes = Allow non-printable esc
 UniqueProperties.name = Unique Properties
 UniqueProperties.desc =  Checks properties file for a duplicated properties.<br/><br/>Rationale: Multiple property keys usually appears after merge or rebase of several branches. While there is no errors in runtime, there can be a confusion on having different values for the duplicated properties.
 UniqueProperties.fileExtensions = file type extension of the files to check.
+
+SuppressWarningsHolder.name = SuppressWarningsHolder
+SuppressWarningsHolder.desc = Maintains a set of check suppressions from {@link SuppressWarnings} annotations.
+SuppressWarningsHolder.aliasList = the list of comma-separated alias assignments
