--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -59,6 +59,7 @@ IllegalCatch.name              = Illegal Catch
 IllegalInstantiation.classes = Comma separated list of classes that should not be instantiated.
 IllegalInstantiation.desc    = Checks for illegal instantiations where a factory method is preferred.<br/>\r\nRationale: Depending on the project, for some classes it might be preferable to create instances through factory methods rather than calling the constructor.\r\n<p>\r\nA simple example is the java.lang.Boolean class. In order to save memory and CPU cycles, it is preferable to use the predefined constants <code>TRUE</code> and <code>FALSE</code>. Constructor invocations should be replaced by calls to <code>Boolean.valueOf()</code>.\r\n</p>\r\nSome extremely performance sensitive projects may require the use of factory methods for other classes as well, to enforce the usage of number caches or object pools.
 IllegalInstantiation.name    = Illegal Instantiation
+IllegalInstantiation.tokens  = tokens to check
 
 IllegalThrows.desc              = This check can be used to ensure that types are not declared to be thrown. Declaring to throw java.lang.Error or java.lang.RuntimeException is almost never acceptable.
 IllegalThrows.illegalClassNames = throw class names to reject
@@ -84,14 +85,11 @@ IllegalType.illegalClassNames       = classes that should not be used as types i
 IllegalType.legalAbstractClassNames = abstract classes that may be used as types.
 IllegalType.name                    = Illegal Type
 IllegalType.tokens                  = Tokens to check.
+IllegalType.validateAbstractClassNames = Whether to validate abstract class names
 IllegalType.memberModifiers         = Check methods and fields with only corresponding modifiers.
 
 InnerAssignment.desc   = Checks for assignments in subexpressions, such as in <code>String s = Integer.toString(i = 2);</code>.<br/>\r\nRationale: With the exception of for iterators, all assignments should occur in their own toplevel statement to increase readability. With inner assignments like the above it is difficult to see all places where a variable is set.
 InnerAssignment.name   = Inner Assignment
-InnerAssignment.tokens = Tokens to check.
-
-JUnitTestCase.desc = Ensures that the setUp(), tearDown() methods are named correctly, have no arguments, return void and are either public or protected.<br/>\r\nAlso ensures that suite() is named correctly, have no arguments, return junit.framewotk.Test, public and static.<br/>\r\nRationale: often times developers will misname one or more of these methods and not realise that the method is not being called.
-JUnitTestCase.name = Junit Test Case
 
 MagicNumber.desc          = Checks that there are no "magic numbers", where a magic number is a numeric literal that is not defined as a constant. By default, -1, 0, 1, and 2 are not considered to be magic numbers.
 MagicNumber.ignoreNumbers = Comma separated list of non-Magic numbers.
@@ -141,6 +139,7 @@ NoFinalizer.name = No Finalizer
 
 PackageDeclaration.desc = Ensure a class is has a package declaration, and (optionally) whether the package name matches the directory name for the source file.<br/>\r\nRationale: Classes that live in the null package cannot be imported. Many novice developers are not aware of this.
 PackageDeclaration.name = Package Declaration
+PackageDeclaration.matchDirectoryStructure = Whether to check for directory and package name match.
 
 ParameterAssignment.desc = Disallow assignment of parameters.<br/>\r\nRationale: Parameter assignment is often considered poor programming practice. Forcing developers to declare parameters as final is often onerous. Having a check ensure that parameters are never assigned would give the best of both worlds.
 ParameterAssignment.name = Parameter Assignment
@@ -156,6 +155,7 @@ ReturnCount.format = method names to ignore
 ReturnCount.max    = maximum allowed number of return statements
 ReturnCount.maxForVoid = maximum allowed number of return statements in void methods/constructors/lambdas
 ReturnCount.name   = Return Count
+ReturnCount.tokens = tokens to check
 
 SimplifyBooleanExpression.desc = Checks for overly complicated boolean expressions. Currently finds code like  <code>if (b == true), b || true, !false</code>, etc.<br/>\r\nRationale: Complex boolean logic makes code hard to understand and maintain.
 SimplifyBooleanExpression.name = Simplify Boolean Expression
@@ -174,6 +174,7 @@ SuperFinalize.name = SuperFinalize
 
 UnnecessaryParentheses.desc = Checks for the use of unnecessary parentheses.
 UnnecessaryParentheses.name = Unnecessary Parentheses
+UnnecessaryParentheses.tokens = tokens to check
 
 OneStatementPerLine.name = One Statement Per Line
 OneStatementPerLine.desc = Checks there is only one statement per line. The following line will be flagged as an error:<br/><code>x = 1; y = 2; // Two statments on a single line.</code>
