--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/design/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/design/checkstyle-metadata.properties
@@ -19,6 +19,7 @@ InterfaceIsType.name                  = Interface Is Type
 
 MutableException.desc   = Ensures that exceptions (defined as any class name conforming to some regular expression) are immutable. That is, have only final fields.<br/>\r\nThe current algorithm is very simple it checks that all members of exception are final. User can still mutates an exception's instance (e.g. Throwable has setStackTrace(StackTraceElement[] stackTrace) method which changes stack trace). But, at least, all information provided by this exception type is unchangable.<br/>\r\nRationale: Exception instances should represent an error condition. Having non final fields not only allows the state to be modified by accident and therefore mask the original condition but also allows developers to accidentally forget to initialise state thereby leading to code catching the exception to draw incorrect conclusions based on the state.
 MutableException.format = pattern for name of exception class.
+MutableException.extendedClassNameFormat = pattern for extended class names
 MutableException.name   = Mutable Exception
 
 ThrowsCount.desc = Restricts throws statements to a specified count (default = 1).<br/>\r\nRationale: Exceptions form part of a methods interface. Declaring a method to throw too many differently rooted exceptions makes exception handling onerous and leads to poor programming practices such as catch (Exception). This check forces developers to put exceptions into a heirachy such that in the simplest case, only one type of exception need be checked for by a caller but allows any sub-classes to be caught specifically if necessary.
@@ -38,4 +39,3 @@ VisibilityModifier.ignoreAnnotationCanonicalNames = ignore annotations canonical
 
 OneTopLevelClass.name = One Top Level Class
 OneTopLevelClass.desc = Checks that each top-level class, interface or enum resides in a source file of its own. Official description of a 'top-level' term:7.6. Top Level Type Declarations. If file doesn't contains public class, enum or interface, top-level type is the first type in file.
-OneTopLevelClass.tokens = tokens to check
