--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/imports/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/imports/checkstyle-metadata.properties
@@ -28,6 +28,8 @@ ImportOrder.option        = policy on the relative order between regular imports
 ImportOrder.ordered       = whether imports within group should be sorted
 ImportOrder.separated     = whether imports groups should be separated by, at least, one blank line
 ImportOrder.sortStaticImportsAlphabetically = whether static imports grouped by top or bottom option are sorted alphabetically or not
+ImportOrder.useContainerOrderingForStatic = whether to use container ordering (Eclipse IDE term) for static imports or not
+ImportOrder.tokens =  tokens to check
 
 Imports.group = Imports
 
@@ -44,6 +46,5 @@ CustomImportOrder.customImportOrderRules = List of order declaration customizing
 CustomImportOrder.standardPackageRegExp = RegExp for STANDARD_JAVA_PACKAGE group imports.
 CustomImportOrder.thirdPartyPackageRegExp = RegExp for THIRDPARTY_PACKAGE group imports.
 CustomImportOrder.specialImportsRegExp = RegExp for SPECIAL_IMPORTS group imports.
-CustomImportOrder.samePackageMatchingDepth = Number of first domains for SAME_PACKAGE group.
-CustomImportOrder.separateLineBetweenGroup =    Force empty line separator between import groups.
+CustomImportOrder.separateLineBetweenGroups =    Force empty line separator between import groups.
 CustomImportOrder.sortImportsInGroupAlphabetically = Force grouping alphabetically.
