--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/naming/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/naming/checkstyle-metadata.properties
@@ -21,11 +21,11 @@ ConstantName.name   = Constant Names
 LocalFinalVariableName.desc   = Checks that local final variables follow naming convention.
 LocalFinalVariableName.format = Regular expression defining required naming pattern.
 LocalFinalVariableName.name   = Local Final Variable Names
+LocalFinalVariableName.tokens = Tokens to check.
 
 LocalVariableName.desc   = Checks that local variables follow naming convention.
 LocalVariableName.format = Regular expression defining required naming pattern.
 LocalVariableName.name   = Local Variable Names
-LocalVariableName.tokens = Tokens to check.
 LocalVariableName.allowOneCharVarInForLoop =  Allow one character variable name in initialization expressions in FOR loop. For example: for (int i = 1; i < 10; i++) {}
 
 MemberName.applyToPackage   = Controls whether to apply the check to package-protected member.
@@ -39,6 +39,11 @@ MemberName.name             = Member Names
 MethodName.desc   = Checks that method names follow naming convention.
 MethodName.format = Regular expression defining required naming pattern.
 MethodName.name   = Method Names
+MethodName.allowClassName = Controls whether to allow a method name to have the same name as the residing class name. This is not to be confused with a constructor. An easy mistake is to place a return type on a constructor declaration which turns it into a method.
+MethodName.applyToPackage   = Controls whether to apply the check to package-protected member.
+MethodName.applyToPrivate   = Controls whether to apply the check to private member.
+MethodName.applyToProtected = Controls whether to apply the check to protected member.
+MethodName.applyToPublic    = Controls whether to apply the check to public member.
 
 MethodTypeParameterName.desc   = Checks that method type parameter names follow naming convention.
 MethodTypeParameterName.format = Regular expression defining required naming pattern.
@@ -81,7 +86,7 @@ AbbreviationAsWordInName.allowedAbbreviationLength = indicates on the allowed am
 AbbreviationAsWordInName.allowedAbbreviations = list of abbreviations that must be skipped for checking. Abbreviations should be separated by comma, no spaces are allowed.
 AbbreviationAsWordInName.ignoreFinal = allow to skip variables with final modifier.
 AbbreviationAsWordInName.ignoreStatic = allow to skip variables with static modifier.
-AbbreviationAsWordInName.ignoreOverriddenMethod = Allows to ignore methods tagged with @Override annotation (that usually mean inherited name).
+AbbreviationAsWordInName.ignoreOverriddenMethods = Allows to ignore methods tagged with @Override annotation (that usually mean inherited name).
 AbbreviationAsWordInName.tokens = Tokens to check.
 
 CatchParameterName.name = Catch Parameter Name
