--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/whitespace/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/whitespace/checkstyle-metadata.properties
@@ -41,13 +41,9 @@ ParenPad.name   = Paren Pad
 ParenPad.option = Policy on how to pad parentheses. nospace = do not pad (e.g. method(a, b)).  space = ensure padding (e.g. method( a, b )).
 ParenPad.tokens = Tokens to check.
 
-TabCharacter.desc = Checks that there are no tab characters ('\\\\t') in the source code.<br/>\r\nRationale:\r\n<ul>\r\n<li>Developers should not need to configure the tab width of their text editors in order to be able to read source code.</li>\r\n<li>From the Apache jakarta coding standards: In a distributed development environment, when the cvs commit messages get sent to a mailing list, they are almost impossible to read if you use tabs.</li>\r\n</ul>\r\n
-TabCharacter.name = Tab Character
-
 TypecastParenPad.desc   = Checks the policy on the padding of parentheses for typecasts. That is, whether a space is required after a left parenthesis and before a right parenthesis, or such spaces are forbidden.
 TypecastParenPad.name   = Typecast Paren Pad
 TypecastParenPad.option = Policy on how to pad parentheses. nospace = do not pad (e.g. method(a, b)).  space = ensure padding (e.g. method( a, b )).
-TypecastParenPad.tokens = Tokens to check.
 
 Whitespace.group                        = Whitespace
 
@@ -81,3 +77,7 @@ SeparatorWrap.tokens = tokens to check.
 SingleSpaceSeparator.name = Single Space Separator
 SingleSpaceSeparator.desc = Checks that non-whitespace characters are separated by no more than one whitespace. Separating characters by tabs or multiple spaces will be reported. Currently the check doesn't permit horizontal alignment. To inspect whitespaces before and after comments, set the property validateComments to true.
 SingleSpaceSeparator.validateComments = If set to true, whitespaces surrounding comments will be ignored.
+
+NoLineWrap.name = No Line Wrap
+NoLineWrap.desc = Checks that chosen statements are not line-wrapped. By default this Check restricts wrapping import and package statements, but it's possible to check any statement.
+NoLineWrap.tokens = tokens to check
