--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/metrics/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/metrics/checkstyle-metadata.properties
@@ -23,6 +23,7 @@ CyclomaticComplexity.desc = Checks cyclomatic complexity against a specified lim
 CyclomaticComplexity.max  = the maximum threshold allowed
 CyclomaticComplexity.name = Cyclomatic Complexity
 CyclomaticComplexity.switchBlockAsSingleDecisionPoint = whether to treat the whole switch block as a single decision point
+CyclomaticComplexity.tokens = tokens to check
 
 JavaNCSS.classMaximum  = the maximum allowed number of non commenting lines in a class.
 JavaNCSS.desc          = Determines complexity of methods, classes and files by counting the Non Commenting Source Statements (NCSS). This check adheres to the  specification for the JavaNCSS-Tool  written by Chr. Clemens Lee.<br/>\r\nRougly said the NCSS metric is calculated by counting the source lines which are not comments, (nearly) equivalent to counting the semicolons and opening curly braces.</br>\r\nThe NCSS for a class is summarized from the NCSS of all its methods, the NCSS of its nested classes and the number of member variable declarations.\r\nThe NCSS for a file is summarized from the ncss of all its top level classes, the number of imports and the package declaration.<br/>\r\nRationale: Too large methods and classes are hard to read and costly to maintain. A large NCSS number often means that a method or class has too many responsabilities and/or functionalities which should be decomposed into smaller units.
