--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checkstyle-metadata.properties
@@ -1,8 +1,8 @@
 Other.group = Other
-Internal.group = Internal
 
 Checker.name           = Checker
 Checker.desc           = Root module of every checkstyle configuration. Cannot be deleted.
+Checker.cacheFile      = caches information about files that have checked ok; used to avoid repeated checks of the same files
 Checker.basedir        = base directory name; stripped off in messages about files
 Checker.localeCountry  = locale country for messages
 Checker.localeLanguage = locale language for messages
@@ -12,9 +12,5 @@ Checker.haltOnException = Controls whether exceptions should halt execution or n
 
 TreeWalker.name           = TreeWalker
 TreeWalker.desc           = FileSetCheck TreeWalker checks individual Java source files and defines properties that are applicable to checking such files.
-TreeWalker.cacheFile      = caches information about files that have checked ok; used to avoid repeated checks of the same files
 TreeWalker.tabWidth       = number of expanded spaces for a tab character ('\t'); used in messages and Checks that require a tab width, such as LineLength
 TreeWalker.fileExtensions = file type extension to identify java files. Setting this property is typically only required if your java source code is preprocessed before compilation and the original files do not have the extension .java
-
-FileContentsHolder.name = FileContentsHolder
-SuppressWarningsHolder.name = SuppressWarningsHolder
