--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/imports/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/imports/checkstyle-metadata.properties
@@ -27,7 +27,9 @@ ImportOrder.name          = Import Order Check
 ImportOrder.option        = policy on the relative order between regular imports and static imports
 ImportOrder.ordered       = whether imports within group should be sorted
 ImportOrder.separated     = whether imports groups should be separated by, at least, one blank line
+ImportOrder.separatedStaticGroups = whether static import groups should be separated by, at least, one blank line or comment and aren't separated internally. (This property has effect only when the property option is is set to top or bottom.)
 ImportOrder.sortStaticImportsAlphabetically = whether static imports grouped by top or bottom option are sorted alphabetically or not
+ImportOrder.staticGroups = list of static import groups (every group identified either by a common prefix string, or by a regular expression enclosed in forward slashes (e.g. /regexp/).\nAll static imports, which does not match any group, falls into an additional group, located at the end.\nThus, the empty list of static groups (the default value) means one group for all static imports.\n(This property has effect only when the property option is set to top or bottom.)
 ImportOrder.useContainerOrderingForStatic = whether to use container ordering (Eclipse IDE term) for static imports or not
 ImportOrder.tokens =  tokens to check
 
