--- a/docs/releases.json
+++ b/docs/releases.json
@@ -1,14 +1,19 @@
 [
   {
+    "version": "Release 8.12.0",
+    "template": "partials/releases/8.12.0/release_notes.html",
+    "open": true
+  },
+  {
     "version": "Release 8.11.0",
     "template": "partials/releases/8.11.0/release_notes.html",
     "open": true
-  }, 
+  },
   {
     "version": "Release 8.10.1",
     "template": "partials/releases/8.10.1/release_notes.html",
     "open": true
-  }, 
+  },
   {
     "version": "Release 8.10.0",
     "template": "partials/releases/8.10.0/release_notes.html",
@@ -16,9 +21,8 @@
   }, 
   {
     "version": "Release 8.8.0",
-    "template": "partials/releases/8.8.0/release_notes.html",
-    "open": true
-  }, 
+    "template": "partials/releases/8.8.0/release_notes.html"
+  },
   {
     "version": "Release 8.7.0",
     "template": "partials/releases/8.7.0/release_notes.html"
