fix wrong button label
The "Up" button in the enhanced configuration is labeled "\ Up"
accidentally. Also fix some other typos in the same file.

Pull #108: Add filter for Files Older Than One Day

update filter to behave like others

update filter to behave like others

--- a/net.sf.eclipsecs.core/core.properties
+++ b/net.sf.eclipsecs.core/core.properties
@@ -34,3 +34,6 @@ WriteProtectedFilter.label       = write protected files
 
 DerivedFilesFilter.description   = Filters files marked as derived, which often applies to generated sources.
 DerivedFilesFilter.label         = derived (generated) files
+
+FilesOlderThanOneDayFilter.description  = Exclude all files that are older than one day.
+FilesOlderThanOneDayFilter.label        = files older than one day
