Have separate test classpath in Eclipse
Maven has separate classpaths for main and test code. Eclipse supports
the same separation since Photon:
https://www.eclipse.org/eclipse/news/4.8/jdt.php. This change enables
classpath separation in Eclipse by marking test sources as such. It
avoids accidental usage of test related classes from main code.

The change is downwards compatible, so development with an older Eclipse
version still works fine.

--- a/net.sf.eclipsecs.checkstyle/.classpath
+++ b/net.sf.eclipsecs.checkstyle/.classpath
@@ -8,7 +8,11 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="metadata"/>
-	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="src" output="target/test-classes" path="test">
+		<attributes>
+			<attribute name="test" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
