--- a/net.sf.eclipsecs.checkstyle/build.properties
+++ b/net.sf.eclipsecs.checkstyle/build.properties
@@ -3,4 +3,5 @@ bin.includes = META-INF/,\
                license/,\
                checkstyle-8.13-all.jar
 jars.compile.order = .
-source.. = metadata/
+source.. = metadata/,\
+           test/
