--- a/net.sf.eclipsecs.ui/build.properties
+++ b/net.sf.eclipsecs.ui/build.properties
@@ -9,7 +9,7 @@ bin.includes = icons/,\
                lib/jfreechart-1.0.14.jar,\
                lib/jcommon-1.0.16.jar
 jars.compile.order = .
-source.. = src/
-source.. = src/
+source.. = src/,\
+           test/
 additional.bundles = org.eclipse.jdt.core,\
                      org.eclipse.core.runtime
