--- a/net.sf.eclipsecs.branding/about.properties
+++ b/net.sf.eclipsecs.branding/about.properties
@@ -1,6 +1,6 @@
-aboutText=Eclipse Checkstyle Plugin {featureVersion}\n\
+aboutText=Eclipse Checkstyle {featureVersion}\n\
 \n\
-Checkstyle integration plugin for Eclipse, distributed under the terms of the GNU Lesser General Public License 2.1.\n\
+Checkstyle integration for Eclipse, distributed under the terms of the GNU Lesser General Public License 2.1.\n\
 Visit http://checkstyle.org/eclipse-cs/ for updates, documentation and support.\n\
 \n\
 (c) Copyright David Schneider, Lars K\u00f6dderitzsch and others, 2002-2018\n\
@@ -8,5 +8,4 @@ This software includes the following 3rd-party libraries:\n\
 Checkstyle, licensed under LGPL 2.1. Visit http://checkstyle.org/\n\
 Jakarta Commons Lang/IO, licensed under APL 2.0. Visit http://commons.apache.org/\n\
 DOM4J, licensed under BSD. Visit http://sourceforge.net/projects/dom4j/\n\
-iText, licensed under Affero General Public License. Visit http://itextpdf.com/\n\
 JFreeChart, licensed under LGPL 3. Visit http://www.jfree.org/jfreechart/
