#125 Update to Checkstyle 8.16

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/modifier/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/modifier/checkstyle-metadata.properties
@@ -17,3 +17,8 @@ InterfaceMemberImpliedModifier.violateImpliedPublicMethod = Control whether to e
 InterfaceMemberImpliedModifier.violateImpliedAbstractMethod = Control whether to enforce that abstract is explicitly coded on interface methods.
 InterfaceMemberImpliedModifier.violateImpliedPublicNested = Control whether to enforce that public is explicitly coded on interface nested types.
 InterfaceMemberImpliedModifier.violateImpliedStaticNested = Control whether to enforce that static is explicitly coded on interface nested types.
+
+ClassMemberImpliedModifier.name = Class Member Implied Modifier
+ClassMemberImpliedModifier.desc =  Checks for implicit modifiers on nested types in classes.<br/>This check is effectively the opposite of RedundantModifier. It checks the modifiers on nested types in classes, ensuring that certain modifiers are explicitly specified even though they are actually redundant.<br/>Nested enums and interfaces within a class are always static and as such the compiler does not require the static modifier. This check provides the ability to enforce that the static modifier is explicitly coded and not implicitly added by the compiler.<p>Rationale for this check: Nested enums and interfaces are treated differently from nested classes as they are only allowed to be static. Developers should not need to remember this rule, and this check provides the means to enforce that the modifier is coded explicitly.</p>
+ClassMemberImpliedModifier.violateImpliedStaticOnNestedEnum = Control whether to enforce that static is explicitly coded on nested enums in classes.
+ClassMemberImpliedModifier.violateImpliedStaticOnNestedInterface = Control whether to enforce that static is explicitly coded on nested interfaces in classes.
