#135 Update to Checkstyle 8.18

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -79,7 +79,7 @@ IllegalTokenText.name       = Illegal Tokens Text
 IllegalTokenText.tokens     = Tokens to check.
 
 IllegalType.desc                    = Checks that particular class are never used as types in variable declarations, return values or parameters. Includes a pattern check that by default disallows abstract classes.<br/>\r\nRationale: Helps reduce coupling on concrete classes. In addition abstract classes should be thought of a convenience base class implementations of interfaces and as such are not types themselves.
-IllegalType.format                  = pattern for illegal class name
+IllegalType.illegalAbstractClassNameFormat = pattern for illegal class name
 IllegalType.ignoredMethodNames      = methods that should not be checked.
 IllegalType.illegalClassNames       = classes that should not be used as types in variable declarations, return values or parameters.
 IllegalType.legalAbstractClassNames = abstract classes that may be used as types.
