--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/filters/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/filters/checkstyle-metadata.properties
@@ -43,3 +43,11 @@ SuppressionXpathFilter.name = Suppression Xpath Filter
 SuppressionXpathFilter.desc = Filter SuppressionXpathFilter works as SuppressionFilter. Additionally, filter processes suppress-xpath elements, which contains xpath-expressions. Xpath-expressions are queries for suppressed nodes inside the AST tree.
 SuppressionXpathFilter.file =  the location of the suppressions XML document file. The order the location is checked is:<ol><li>as a filesystem location</li><li>if no file found, and the location starts with either http:// or https://, then it is interpreted as a URL</li><li>if no file found, then passed to the ClassLoader.getResource() method.</li></ol>
 SuppressionXpathFilter.optional = Tells what to do when the file is not existing. If optional is set to false the file must exist, or else it ends with error. On the other hand if optional is true and file is not found, the filter accept all audit events.
+
+SuppressionXpathSingleFilter.name = Suppression Xpath Single Filter
+SuppressionXpathSingleFilter.desc =  Filter SuppressionXpathSingleFilter suppresses audit events for Checks violations in the specified file, class, checks, message, module id, and xpath.<p>Rationale: To allow users use suppressions configured in the same config with other modules. SuppressionFilter and SuppressionXpathFilter are require separate file.</p><p>Advice: If checkstyle configuration is used for several projects, single suppressions on common files/folders is better to put in checkstyle configuration as common rule. All suppression that are for specific file names is better to keep in project specific config file.</p><p>Attention: This filter only supports single suppression, and will need multiple instances if users wants to suppress multiple violations.</p> 
+SuppressionXpathSingleFilter.files = a Regular Expression matched against the file name associated with an audit event
+SuppressionXpathSingleFilter.checks = a Regular Expression matched against the name of the check associated with an audit event.
+SuppressionXpathSingleFilter.message = a Regular Expression matched against the message of the check associated with an audit event.
+SuppressionXpathSingleFilter.id = a string matched against the ID of the check associated with an audit event.
+SuppressionXpathSingleFilter.query = a string xpath query.
