--- a/net.sf.eclipsecs.doc/src/main/resources/releases.json
+++ b/net.sf.eclipsecs.doc/src/main/resources/releases.json
@@ -1,5 +1,10 @@
 [
   {
+    "version": "Release 8.18.0",
+    "template": "partials/releases/8.18.0/release_notes.html",
+    "open": true
+  },
+  {
     "version": "Release 8.17.0",
     "template": "partials/releases/8.17.0/release_notes.html",
     "open": true
@@ -16,8 +21,7 @@
   },
   {
     "version": "Release 8.14.0",
-    "template": "partials/releases/8.14.0/release_notes.html",
-    "open": true
+    "template": "partials/releases/8.14.0/release_notes.html"
   },
   {
     "version": "Release 8.13.0",
